Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UWorld.h

	DOTNET_EXPORT auto E_PROP_UWorld_AudioTimeSeconds_GET(UWorld* Ptr) { return Ptr->AudioTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_AudioTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->AudioTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bActorsInitialized_GET(UWorld* Ptr) { return Ptr->bActorsInitialized; }
	DOTNET_EXPORT void E_PROP_UWorld_bActorsInitialized_SET(UWorld* Ptr, uint8 Value) { Ptr->bActorsInitialized = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bAggressiveLOD_GET(UWorld* Ptr) { return Ptr->bAggressiveLOD; }
	DOTNET_EXPORT void E_PROP_UWorld_bAggressiveLOD_SET(UWorld* Ptr, uint8 Value) { Ptr->bAggressiveLOD = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bAllowAudioPlayback_GET(UWorld* Ptr) { return Ptr->bAllowAudioPlayback; }
	DOTNET_EXPORT void E_PROP_UWorld_bAllowAudioPlayback_SET(UWorld* Ptr, uint8 Value) { Ptr->bAllowAudioPlayback = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bAreConstraintsDirty_GET(UWorld* Ptr) { return Ptr->bAreConstraintsDirty; }
	DOTNET_EXPORT void E_PROP_UWorld_bAreConstraintsDirty_SET(UWorld* Ptr, uint8 Value) { Ptr->bAreConstraintsDirty = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bBegunPlay_GET(UWorld* Ptr) { return Ptr->bBegunPlay; }
	DOTNET_EXPORT void E_PROP_UWorld_bBegunPlay_SET(UWorld* Ptr, uint8 Value) { Ptr->bBegunPlay = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bCreateRenderStateForHiddenComponents_GET(UWorld* Ptr) { return Ptr->bCreateRenderStateForHiddenComponents; }
	DOTNET_EXPORT void E_PROP_UWorld_bCreateRenderStateForHiddenComponents_SET(UWorld* Ptr, uint8 Value) { Ptr->bCreateRenderStateForHiddenComponents = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDebugDrawAllTraceTags_GET(UWorld* Ptr) { return Ptr->bDebugDrawAllTraceTags; }
	DOTNET_EXPORT void E_PROP_UWorld_bDebugDrawAllTraceTags_SET(UWorld* Ptr, bool Value) { Ptr->bDebugDrawAllTraceTags = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDebugPauseExecution_GET(UWorld* Ptr) { return Ptr->bDebugPauseExecution; }
	DOTNET_EXPORT void E_PROP_UWorld_bDebugPauseExecution_SET(UWorld* Ptr, uint8 Value) { Ptr->bDebugPauseExecution = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_GET(UWorld* Ptr) { return Ptr->bDoDelayedUpdateCullDistanceVolumes; }
	DOTNET_EXPORT void E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_SET(UWorld* Ptr, uint8 Value) { Ptr->bDoDelayedUpdateCullDistanceVolumes = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bDropDetail_GET(UWorld* Ptr) { return Ptr->bDropDetail; }
	DOTNET_EXPORT void E_PROP_UWorld_bDropDetail_SET(UWorld* Ptr, uint8 Value) { Ptr->bDropDetail = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bInTick_GET(UWorld* Ptr) { return Ptr->bInTick; }
	DOTNET_EXPORT void E_PROP_UWorld_bInTick_SET(UWorld* Ptr, uint8 Value) { Ptr->bInTick = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsBuilt_GET(UWorld* Ptr) { return Ptr->bIsBuilt; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsBuilt_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsBuilt = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsCameraMoveableWhenPaused_GET(UWorld* Ptr) { return Ptr->bIsCameraMoveableWhenPaused; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsCameraMoveableWhenPaused_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsCameraMoveableWhenPaused = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsDefaultLevel_GET(UWorld* Ptr) { return Ptr->bIsDefaultLevel; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsDefaultLevel_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsDefaultLevel = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsLevelStreamingFrozen_GET(UWorld* Ptr) { return Ptr->bIsLevelStreamingFrozen; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsLevelStreamingFrozen_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsLevelStreamingFrozen = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsRunningConstructionScript_GET(UWorld* Ptr) { return Ptr->bIsRunningConstructionScript; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsRunningConstructionScript_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsRunningConstructionScript = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsTearingDown_GET(UWorld* Ptr) { return Ptr->bIsTearingDown; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsTearingDown_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsTearingDown = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_bIsWorldInitialized_GET(UWorld* Ptr) { return Ptr->bIsWorldInitialized; }
	DOTNET_EXPORT void E_PROP_UWorld_bIsWorldInitialized_SET(UWorld* Ptr, uint8 Value) { Ptr->bIsWorldInitialized = Value; }
	DOTNET_EXPORT auto E_UWorld_RemoveNetworkActor(UWorld* Self, AActor* Actor)
	{
		auto _p0 = Actor;
		Self->RemoveNetworkActor(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_RemovePawn(UWorld* Self, APawn* Pawn)
	{
		auto _p0 = Pawn;
		Self->RemovePawn(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_RemovePIEPrefix(UWorld* Self, char* Source)
	{
		auto _p0 = ConvertFromManage_FString(Source);
		return ConvertToManage_StringWrapper(Self->RemovePIEPrefix(_p0));
	}
	DOTNET_EXPORT auto E_UWorld_RemoveStreamingLevelAt(UWorld* Self, int32 IndexToRemove)
	{
		auto _p0 = IndexToRemove;
		return Self->RemoveStreamingLevelAt(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_RenameToPIEWorld(UWorld* Self, int32 PIEInstanceID)
	{
		auto _p0 = PIEInstanceID;
		Self->RenameToPIEWorld(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_RequiresHitProxies(UWorld* Self)
	{
		return Self->RequiresHitProxies();
	}
	DOTNET_EXPORT auto E_UWorld_RunTickGroup(UWorld* Self, ETickingGroup Group, bool bBlockTillComplete)
	{
		auto _p0 = Group;
		auto _p1 = bBlockTillComplete;
		Self->RunTickGroup(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_SendAllEndOfFrameUpdates(UWorld* Self)
	{
		Self->SendAllEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_UWorld_SetActiveLevelCollection(UWorld* Self, int32 LevelCollectionIndex)
	{
		auto _p0 = LevelCollectionIndex;
		Self->SetActiveLevelCollection(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetGameMode(UWorld* Self, INT_PTR InURL)
	{
		auto& _p0 = *(FURL*)InURL;
		return Self->SetGameMode(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetMapNeedsLightingFullyRebuilt(UWorld* Self, int32 InNumLightingUnbuiltObjects, int32 InNumUnbuiltReflectionCaptures)
	{
		auto _p0 = InNumLightingUnbuiltObjects;
		auto _p1 = InNumUnbuiltReflectionCaptures;
		Self->SetMapNeedsLightingFullyRebuilt(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_SetMaterialParameterCollectionInstanceNeedsUpdate(UWorld* Self)
	{
		Self->SetMaterialParameterCollectionInstanceNeedsUpdate();
	}
	DOTNET_EXPORT auto E_UWorld_SetSeamlessTravelMidpointPause(UWorld* Self, bool bNowPaused)
	{
		auto _p0 = bNowPaused;
		Self->SetSeamlessTravelMidpointPause(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetShouldForceUnloadStreamingLevels(UWorld* Self, bool bInShouldForceUnloadStreamingLevels)
	{
		auto _p0 = bInShouldForceUnloadStreamingLevels;
		Self->SetShouldForceUnloadStreamingLevels(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetShouldForceVisibleStreamingLevels(UWorld* Self, bool bInShouldForceVisibleStreamingLevels)
	{
		auto _p0 = bInShouldForceVisibleStreamingLevels;
		Self->SetShouldForceVisibleStreamingLevels(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetShouldTick(UWorld* Self, bool bInShouldTick)
	{
		auto _p0 = bInShouldTick;
		Self->SetShouldTick(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetTimeUntilNextGarbageCollection(UWorld* Self, float MinTimeUntilNextPass)
	{
		auto _p0 = MinTimeUntilNextPass;
		Self->SetTimeUntilNextGarbageCollection(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetupParameterCollectionInstances(UWorld* Self)
	{
		Self->SetupParameterCollectionInstances();
	}
	DOTNET_EXPORT auto E_UWorld_SetupPhysicsTickFunctions(UWorld* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->SetupPhysicsTickFunctions(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_ShouldTick(UWorld* Self)
	{
		return Self->ShouldTick();
	}
	DOTNET_EXPORT auto E_UWorld_StartPhysicsSim(UWorld* Self)
	{
		Self->StartPhysicsSim();
	}
	DOTNET_EXPORT auto E_UWorld_StripPIEPrefixFromPackageName(UWorld* Self, char* PackageName, char* Prefix)
	{
		auto _p0 = ConvertFromManage_FString(PackageName);
		auto _p1 = ConvertFromManage_FString(Prefix);
		return ConvertToManage_StringWrapper(Self->StripPIEPrefixFromPackageName(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UWorld_Tick(UWorld* Self, ELevelTick TickType, float DeltaSeconds)
	{
		auto _p0 = TickType;
		auto _p1 = DeltaSeconds;
		Self->Tick(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_TickNetClient(UWorld* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->TickNetClient(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_TimeSince(UWorld* Self, float Time)
	{
		auto _p0 = Time;
		return Self->TimeSince(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_TransferBlueprintDebugReferences(UWorld* Self, UWorld* NewWorld)
	{
		auto _p0 = NewWorld;
		Self->TransferBlueprintDebugReferences(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_TriggerStreamingDataRebuild(UWorld* Self)
	{
		Self->TriggerStreamingDataRebuild();
	}
	DOTNET_EXPORT auto E_UWorld_UpdateAllSkyCaptures(UWorld* Self)
	{
		Self->UpdateAllSkyCaptures();
	}
	DOTNET_EXPORT auto E_UWorld_UpdateCullDistanceVolumes(UWorld* Self, AActor* ActorToUpdate, UPrimitiveComponent* ComponentToUpdate)
	{
		auto _p0 = ActorToUpdate;
		auto _p1 = ComponentToUpdate;
		return Self->UpdateCullDistanceVolumes(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_UpdateLevelStreaming(UWorld* Self)
	{
		Self->UpdateLevelStreaming();
	}
	DOTNET_EXPORT auto E_UWorld_UpdateParameterCollectionInstances(UWorld* Self, bool bUpdateInstanceUniformBuffers, bool bRecreateUniformBuffer)
	{
		auto _p0 = bUpdateInstanceUniformBuffers;
		auto _p1 = bRecreateUniformBuffer;
		Self->UpdateParameterCollectionInstances(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_UpdateWorldComponents(UWorld* Self, bool bRerunConstructionScripts, bool bCurrentLevelOnly)
	{
		auto _p0 = bRerunConstructionScripts;
		auto _p1 = bCurrentLevelOnly;
		Self->UpdateWorldComponents(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_UsesGameHiddenFlags(UWorld* Self)
	{
		return Self->UsesGameHiddenFlags();
	}