Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/UWorld.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_RemoveNetworkActor(IntPtr self, IntPtr actor);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_RemovePawn(IntPtr self, IntPtr pawn);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_UWorld_RemovePIEPrefix(IntPtr self, string source);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UWorld_RemoveStreamingLevelAt(IntPtr self, int indexToRemove);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_RenameToPIEWorld(IntPtr self, int pIEInstanceID);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UWorld_RequiresHitProxies(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_RunTickGroup(IntPtr self, byte group, bool bBlockTillComplete);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SendAllEndOfFrameUpdates(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetActiveLevelCollection(IntPtr self, int levelCollectionIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UWorld_SetGameMode(IntPtr self, IntPtr inURL);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetMapNeedsLightingFullyRebuilt(IntPtr self, int inNumLightingUnbuiltObjects, int inNumUnbuiltReflectionCaptures);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetMaterialParameterCollectionInstanceNeedsUpdate(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetSeamlessTravelMidpointPause(IntPtr self, bool bNowPaused);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetShouldForceUnloadStreamingLevels(IntPtr self, bool bInShouldForceUnloadStreamingLevels);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetShouldForceVisibleStreamingLevels(IntPtr self, bool bInShouldForceVisibleStreamingLevels);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetShouldTick(IntPtr self, bool bInShouldTick);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetTimeUntilNextGarbageCollection(IntPtr self, float minTimeUntilNextPass);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetupParameterCollectionInstances(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_SetupPhysicsTickFunctions(IntPtr self, float deltaSeconds);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UWorld_ShouldTick(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_StartPhysicsSim(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_UWorld_StripPIEPrefixFromPackageName(IntPtr self, string packageName, string prefix);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_Tick(IntPtr self, byte tickType, float deltaSeconds);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_TickNetClient(IntPtr self, float deltaSeconds);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern float E_UWorld_TimeSince(IntPtr self, float time);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_TransferBlueprintDebugReferences(IntPtr self, IntPtr newWorld);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_TriggerStreamingDataRebuild(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_UpdateAllSkyCaptures(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UWorld_UpdateCullDistanceVolumes(IntPtr self, IntPtr actorToUpdate, IntPtr componentToUpdate);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_UpdateLevelStreaming(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_UpdateParameterCollectionInstances(IntPtr self, bool bUpdateInstanceUniformBuffers, bool bRecreateUniformBuffer);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UWorld_UpdateWorldComponents(IntPtr self, bool bRerunConstructionScripts, bool bCurrentLevelOnly);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_UWorld_UsesGameHiddenFlags(IntPtr self);
		
		#endregion
		
		#region Property
		
		/// <summary>
		/// <para>Time in seconds since level began play, but IS paused when the game is paused, and IS NOT dilated/clamped. </para>
		/// </summary>
		public float AudioTimeSeconds
		{
			get => E_PROP_UWorld_AudioTimeSeconds_GET(NativePointer);
			set => E_PROP_UWorld_AudioTimeSeconds_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether actors have been initialized for play </para>
		/// </summary>
		public byte bActorsInitialized
		{
			get => E_PROP_UWorld_bActorsInitialized_GET(NativePointer);
			set => E_PROP_UWorld_bActorsInitialized_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>frame rate is well below DesiredFrameRate, so make LOD more aggressive </para>
		/// </summary>
		public byte bAggressiveLOD
		{
			get => E_PROP_UWorld_bAggressiveLOD_GET(NativePointer);
			set => E_PROP_UWorld_bAggressiveLOD_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Indicates this scene always allows audio playback. </para>
		/// </summary>
		public byte bAllowAudioPlayback
		{
			get => E_PROP_UWorld_bAllowAudioPlayback_GET(NativePointer);
			set => E_PROP_UWorld_bAllowAudioPlayback_SET(NativePointer, value);
		}

		public byte bAreConstraintsDirty
		{
			get => E_PROP_UWorld_bAreConstraintsDirty_GET(NativePointer);
			set => E_PROP_UWorld_bAreConstraintsDirty_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether BeginPlay has been called on actors </para>
		/// </summary>
		public byte bBegunPlay
		{
			get => E_PROP_UWorld_bBegunPlay_GET(NativePointer);
			set => E_PROP_UWorld_bBegunPlay_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If TRUE, 'hidden' components will still create render proxy, so can draw info (see USceneComponent::ShouldRender) </para>
		/// </summary>
		public byte bCreateRenderStateForHiddenComponents
		{
			get => E_PROP_UWorld_bCreateRenderStateForHiddenComponents_GET(NativePointer);
			set => E_PROP_UWorld_bCreateRenderStateForHiddenComponents_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>When set to true, all scene queries will be drawn </para>
		/// </summary>
		public bool bDebugDrawAllTraceTags
		{
			get => E_PROP_UWorld_bDebugDrawAllTraceTags_GET(NativePointer);
			set => E_PROP_UWorld_bDebugDrawAllTraceTags_SET(NativePointer, value);
		}

		public byte bDebugPauseExecution
		{
			get => E_PROP_UWorld_bDebugPauseExecution_GET(NativePointer);
			set => E_PROP_UWorld_bDebugPauseExecution_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>True we want to execute a call to UpdateCulledTriggerVolumes during Tick </para>
		/// </summary>
		public byte bDoDelayedUpdateCullDistanceVolumes
		{
			get => E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_GET(NativePointer);
			set => E_PROP_UWorld_bDoDelayedUpdateCullDistanceVolumes_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>frame rate is below DesiredFrameRate, so drop high detail actors </para>
		/// </summary>
		public byte bDropDetail
		{
			get => E_PROP_UWorld_bDropDetail_GET(NativePointer);
			set => E_PROP_UWorld_bDropDetail_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether we are in the middle of ticking actors/components or not </para>
		/// </summary>
		public byte bInTick
		{
			get => E_PROP_UWorld_bInTick_GET(NativePointer);
			set => E_PROP_UWorld_bInTick_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether we have already built the collision tree or not </para>
		/// </summary>
		public byte bIsBuilt
		{
			get => E_PROP_UWorld_bIsBuilt_GET(NativePointer);
			set => E_PROP_UWorld_bIsBuilt_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>When set, camera is potentially moveable even when paused </para>
		/// </summary>
		public byte bIsCameraMoveableWhenPaused
		{
			get => E_PROP_UWorld_bIsCameraMoveableWhenPaused_GET(NativePointer);
			set => E_PROP_UWorld_bIsCameraMoveableWhenPaused_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>That map is default map or not </para>
		/// </summary>
		public byte bIsDefaultLevel
		{
			get => E_PROP_UWorld_bIsDefaultLevel_GET(NativePointer);
			set => E_PROP_UWorld_bIsDefaultLevel_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Is level streaming currently frozen? </para>
		/// </summary>
		public byte bIsLevelStreamingFrozen
		{
			get => E_PROP_UWorld_bIsLevelStreamingFrozen_GET(NativePointer);
			set => E_PROP_UWorld_bIsLevelStreamingFrozen_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true this world is in the process of running the construction script for an actor </para>
		/// </summary>
		public byte bIsRunningConstructionScript
		{
			get => E_PROP_UWorld_bIsRunningConstructionScript_GET(NativePointer);
			set => E_PROP_UWorld_bIsRunningConstructionScript_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Is the world being torn down </para>
		/// </summary>
		public byte bIsTearingDown
		{
			get => E_PROP_UWorld_bIsTearingDown_GET(NativePointer);
			set => E_PROP_UWorld_bIsTearingDown_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether world object has been initialized via Init() </para>
		/// </summary>
		public byte bIsWorldInitialized
		{
			get => E_PROP_UWorld_bIsWorldInitialized_GET(NativePointer);
			set => E_PROP_UWorld_bIsWorldInitialized_SET(NativePointer, value);
		}

